--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
     <div class="navbar-text float-right mr-5 md:mr-0">
       <% if user_signed_in? %>
         <div class="py-5">
-          <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete, turbo: false }, class: "text-gray-200 hover:text-white transition" %>
+          <%= button_to "Logout", destroy_user_session_path, method: :delete, data: { turbo: false }, class: "text-gray-200 hover:text-white transition" %>
         </div>
       <% else %>
         <div class="py-5 space-x-4">
