--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -11,8 +11,8 @@
       <h4 class="uppercase font-medium text-xl mb-2 text-gray-800 hover:text-primary line-clamp-1 transition"><%= product.name %></h4>
     <% end %>
     <div class="flex items-baseline mb-1 space-x-2">
-      <p class="text-xl text-primary font-semibold">$<%= product.price %></p>
-      <p class="text-sm text-gray-400 line-through">$<%= product.price %></p>
+      <p class="text-xl text-primary font-semibold">₹<%= product.price %></p>
+      <p class="text-sm text-gray-400 line-through">₹<%= product.price %></p>
     </div>
     <div class="flex items-center">
       <div class="flex gap-1 text-sm text-yellow-400">
