--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -44,10 +44,9 @@
     <p class="mt-4 text-gray-600"><%= @product.description %></p>
 
     <div class="mt-6 flex gap-3 border-b border-gray-200 pb-5 pt-5">
-      <a href="#"
-         class="bg-primary border border-primary text-white px-8 py-2 font-medium rounded uppercase flex items-center gap-2 hover:bg-transparent hover:text-primary transition">
+      <%= button_to carts_path(product_id: @product.id), method: :post, class: 'bg-primary border border-primary text-white px-8 py-2 font-medium rounded uppercase flex items-center gap-2 hover:bg-transparent hover:text-primary transition' do %>
         <i class="fa-solid fa-bag-shopping"></i> Add to cart
-      </a>
+      <% end %>
     </div>
 
     <div class="flex gap-3 mt-4">
